header bar, whole page white fix

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -4788,7 +4788,7 @@ $disclosure-list-large: 1100px;
 
 
 .site-header {
-    background: black
+    background: transparent
 }
 #shopify-section-header {
   color: transparent
