--- a/sections/my-dynamic.liquid
+++ b/sections/my-dynamic.liquid
@@ -1,7 +1,7 @@
 {% for block in section.blocks %}
 <div class="row {% if block.settings.togglecontent == "left" %}left {% endif %}">
   <div class="col-1">
-    <h1 style="font-size:43px">{{ block.settings.head }}</h1>
+    <h1 class="hero__title" style="font-size:43px">{{ block.settings.head }}</h1>
      <img class="disp" src={{ block.settings.img | img_url:'large' }}/>	
     <p class="parag">{{ block.settings.ds }}</p>
   </div>
