--- a/sections/my-section.liquid
+++ b/sections/my-section.liquid
@@ -1,6 +1,6 @@
 <div class="section  mysection">
   <div class="col-1">
-    <h1 style="text-align:center;font-size:43px">The Complete 8 Step Process</h1>
+    <h1 class="hero__title" style="text-align:center;font-size:43px">The Complete 8 Step Process</h1>
     <p style="font-size:15px">Below you can read about the <b> complete 8 step process </b> that<b> every song </b>, no matter size or style, goes through when our engineers are tasked with the job of making your song <b> sound great </b>. Each step below is <b> included </b> with every mixing purchase <b> at no additional cost</b>.</p>
   </div>
   <div class="col-1" style="text-align:center">
