--- a/templates/blog.alternate2.liquid
+++ b/templates/blog.alternate2.liquid
@@ -6,7 +6,7 @@
   <div class="grid__item large--five-sixths push--large--one-twelfth">
 
     <header class="section-header text-center">
-      <h1>
+      <h1 class="hero__title">
         {% if current_tags %}
           {{ blog.title | link_to: blog.url }} &mdash; {{ current_tags.first }}
         {% else %}
@@ -23,7 +23,7 @@
     <img src="https://cdn.shopify.com/s/files/1/0486/3367/5930/files/ebb39dd3-8f57-4b9a-9db1-b77a506a663e.JPG?v=1606168606">
     
     <header class="text-center" style="margin:30px 0px">
-       <h1><em>
+       <h1 class="hero__title"><em>
       MOGUL MINDSET MARKETING
          </em>
          </h1>
@@ -60,7 +60,7 @@
           <hr class="hr--small hr--left small--hide">
         </div>
         <div class="grid__item large--six-tenths push--large--one-tenth">
-          <h2 class="h3"><a class="article__heading-link" href="{{ article.url }}">{{ article.title }}</a></h2>
+          <h2 class="h3 hero__title"><a  href="{{ article.url }}">{{ article.title }}</a></h2>
           <div class="rte rte--indented-images">
             {{ article_content | strip_html | truncatewords: 120 }}
           </div>
