--- a/templates/page.music-production-new.liquid
+++ b/templates/page.music-production-new.liquid
@@ -1,5 +1,5 @@
 <header class="section-header text-center">
-    <h1>{{ page.title }}</h1>
+    <h1 class="hero__title">{{ page.title }}</h1>
     <hr class="hr--small">
   </header>
   
