--- a/templates/page.service.liquid
+++ b/templates/page.service.liquid
@@ -3,7 +3,7 @@
   <div class="grid__item large--five-sixths push--large--one-twelfth">
 
     <header class="section-header text-center">
-      <h1>{{ page.title }}</h1>
+      <h1 class="hero__title">{{ page.title }}</h1>
       <hr class="hr--small">
     </header>
     <div class="menu-container">
