Mix & Mastering Page header bar bug fix

--- a/assets/timber.scss.liquid
+++ b/assets/timber.scss.liquid
@@ -535,13 +535,13 @@ body {
   display: block;
 
   // to be kept before Sections Everywhere
-  body:not(.template-index) & {
-    padding-top: $gutter;
+  // body:not(.template-index) & {
+  //   padding-top: $gutter;
 
-    @include at-query($min, $large) {
-      padding-top: $contentTopMargin;
-    }
-  }
+  //   @include at-query($min, $large) {
+  //     padding-top: $contentTopMargin;
+  //   }
+  // }
 
   @include at-query($min, $postSmall) {
     padding-bottom: 40px;
