--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -19,7 +19,7 @@
     {% if section.settings.media_layout == "stacked" %}{% assign stacked = true %}{% endif %}
     {%- assign first_media = true -%}
 <div id="backtop" style="clear:both;">
-    <div class="grid product-single" style="position:absolute;width:100%;left: 30px;padding: ;background-size: cover;background-repeat: no-repeat;margin-top:-80px;padding-top:60px;padding-right:40px;background-image:url('{{ section.settings.bg-image | img_url: 'master' }}');">
+    <div class="grid product-single" style="position:absolute;width:100%;left: 30px;padding: ; background-size: cover;background-repeat: no-repeat;padding-top:60px;padding-right:40px;background-image:url('{{ section.settings.bg-image | img_url: 'master' }}');">
       <div class="grid__item large--seven-twelfths medium--seven-twelfths text-center">
         <div id="ProductMediaGroup-{{ section.id }}" class="product-single__media-group-wrapper" data-product-single-media-group-wrapper>
           <div class="product-single__media-group{% unless stacked %} product-single__media-group--single-xr{% endunless %}" data-product-single-media-group>
@@ -878,7 +878,6 @@
       left: 15px !important;
       background-size: cover;
       background-repeat: no-repeat;
-      margin-top: -80px;
       padding-top: 110px !important;
       padding-right: 40px !important;
       padding-left: 25px !important;
