title white color fix 2

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -4795,7 +4795,7 @@ $disclosure-list-large: 1100px;
 }
 
 .site-footer__copyright-content a {
-  color: white
+  color: rgb(0, 0, 0);
 }
 
 .site-footer__linklist {
