--- a/sections/block-button.liquid
+++ b/sections/block-button.liquid
@@ -5,7 +5,7 @@
    </div>
 </div>
 
-<div class="faqtop"><h1>MIXING FAQ</h1></div>
+<div class="faqtop"><h1 class="hero__title">MIXING FAQ</h1></div>
   <div id="faqsection">
   <div class="faqwidth">
     <div class="accordion">
