--- a/templates/blog.alternate.liquid
+++ b/templates/blog.alternate.liquid
@@ -6,7 +6,7 @@
   <div class="grid__item large--five-sixths push--large--one-twelfth">
 
     <header class="section-header text-center">
-      <h1>
+      <h1 class="hero__title">
         {% if current_tags %}
           {{ blog.title | link_to: blog.url }} &mdash; {{ current_tags.first }}
         {% else %}
@@ -51,7 +51,7 @@
           <hr class="hr--small hr--left small--hide">
         </div>
         <div class="grid__item large--six-tenths push--large--one-tenth">
-          <h2 class="h3"><a class="article__heading-link" href="{{ article.url }}">{{ article.title }}</a></h2>
+          <h2 class="h3"><a  href="{{ article.url }}">{{ article.title }}</a></h2>
           <div class="rte rte--indented-images">
             {{ article_content | strip_html | truncatewords: 120 }}
           </div>
