--- a/templates/page.contact.liquid
+++ b/templates/page.contact.liquid
@@ -4,7 +4,7 @@
   <div class="grid__item large--five-sixths push--large--one-twelfth">
 
     <header class="section-header text-center">
-      <h1>{{ page.title }}</h1>
+      <h1 class="hero__title">{{ page.title }}</h1>
       <hr class="hr--small">
     </header>
 
