submit page fixed

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -115,6 +115,8 @@
 
   <script src="{{ 'theme.js' | asset_url }}" defer="defer"></script>
 
+  <script src="{{ 'custom.js' | asset_url }}" defer="defer"></script>
+
   <!-- Header hook for plugins ================================================== -->
   {{ content_for_header }}
 
