--- a/templates/page.liquid
+++ b/templates/page.liquid
@@ -1,19 +1,2 @@
-{% include 'aaa_mem_helper' with 'page' %}<!-- /templates/page.liquid -->
-<div class="grid">
-  <div class="grid__item large--five-sixths push--large--one-twelfth">
+{% section 'template-submit' %}
 
-    <header class="section-header text-center">
-      <h1 class="hero__title">{{ page.title }}</h1>
-      <hr class="hr--small">
-    </header>
-
-    <div class="grid">
-      <div class="grid__item large--four-fifths push--large--one-tenth">
-        <div class="rte rte--nomargin rte--indented-images">
-          {{ page.content }}
-        </div>
-      </div>
-    </div>
-
-  </div>
-</div>
