--- a/sections/collection-template.liquid
+++ b/sections/collection-template.liquid
@@ -41,7 +41,7 @@
 <div id="CollectionSection" data-section-id="{{ section.id }}" data-section-type="collection-template" data-grid-type="{{ section.settings.collection_products_grid }}">
   {%- paginate collection.products by 12 -%}
   <header class="section-header text-center">
-    <h1>{{ collection.title }}</h1>
+    <h1 class="hero__title">{{ collection.title }}</h1>
     <hr class="hr--small">
     {%- if collection.description != blank -%}
       <div class="grid">
