--- a/sections/template-submit.liquid
+++ b/sections/template-submit.liquid
@@ -19,15 +19,13 @@
             <div>
               <div class="popupCloseButton">&times;</div>
                 {% assign text_blocks = section.blocks | where: 'type', 'text' %}
-                {% for block in text_blocks %}
-                                    
-                    <div class="row">
-                        <div class="col-1">                           
-                            <img class="disp" src={{ block.settings.content_image | img_url:'large' }}/>	 
-                            <p class="popupCloseButton-richtext" >{{ block.settings.content_richtext }}</p>                           
-                        </div>                       
-                    </div>                    
-                    
+                {% for block in text_blocks %}                                    
+                  <div class="row">
+                    <div class="col-1 popupCloseButton-contnet">                           
+                      <img class="disp" src={{ block.settings.content_image | img_url: '200x', format: 'jpg', scale: 2 }}>	 
+                      <p class="popupCloseButton-richtext" >{{ block.settings.content_richtext }}</p>                           
+                    </div>                       
+                  </div>
                 {% endfor %}
               </div>
             </div>
@@ -35,29 +33,29 @@
 
           <div class="submit__review">
             {% assign review_blocks = section.blocks | where: 'type', 'contact-form' %}                             
-                <div class="row">
-                    <div class="col-1">
-                        {%- comment -%}                          
-                            <img class="disp" src={{ block.settings.reviw_image | img_url:'small' }}/>	 
-                        {%- endcomment -%} 
-                        <select id="pet-select" onchange="myFunction()">
-                            <option value="Empty">Choose an Review..</option> 
-                            {% for block in review_blocks %}
-                                <div {{ block.shopify_attributes }}>                                              
-                                    <option value="{{ block.settings.review_title }}">{{ block.settings.review_title }}</option>                                         
-                                </div>
-                            {% endfor %}          
-                        </select>
-
-                        {% for block in review_blocks %}
-                            <div class="{{ "review_content"  | append: forloop.index }}">
-                                <a href="{{ block.settings.review_action }}">
-                                    <img class="disp" src={{ block.settings.review_image | img_url: '200x' }}/>  
-                                </a>
-                            </div>
-                        {% endfor %}
-                    </div>                       
-                </div>  
+            <div class="row">
+              <div class="submit__review--content">
+                {%- comment -%}                          
+                  <img class="disp" src={{ block.settings.reviw_image | img_url:'small' }}/>	 
+                 
+                  <select id="pet-select" onchange="myFunction()">
+                    <option value="Empty">Choose an Review..</option> 
+                    {% for block in review_blocks %}
+                      <div {{ block.shopify_attributes }}>                                              
+                        <option value="{{ block.settings.review_title }}">{{ block.settings.review_title }}</option>                                         
+                      </div>
+                    {% endfor %}          
+                  </select>
+                {%- endcomment -%}
+                {% for block in review_blocks %}
+                  <div class="review_content">
+                    <a href="{{ block.settings.review_action }}">                      
+                      <img class="disp" src={{ block.settings.review_image | img_url: '150x' }}/>                        
+                    </a>
+                  </div>
+                {% endfor %}
+              </div>                      
+            </div>  
           </div>
 
         </div>
